--- a/client/styles.css
+++ b/client/styles.css
@@ -6,8 +6,8 @@
   }
   
   body {
-    background-color: #f7fafc;
-    color: #2d3748;
+    background-color:#0f172a;
+    color: #d1d8e5;
     line-height: 1.6;
   }
   
@@ -15,10 +15,11 @@
     max-width: 1200px;
     margin: 0 auto;
     padding: 20px;
+    border: 1px white;
   }
   
   .header {
-    background-color: #4299e1;
+    background-color:   #4f46e5;
     color: white;
     padding: 20px;
     text-align: center;
@@ -30,10 +31,11 @@
   .login-container {
     max-width: 500px;
     margin: 0 auto;
-    background-color: white;
+   
     padding: 30px;
     border-radius: 8px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    background: #1e293b;
   }
   
   .form-group {
@@ -55,7 +57,7 @@
   }
   
   button {
-    background-color: #4299e1;
+    background-color: #6366f1;;
     color: white;
     border: none;
     padding: 12px 20px;
@@ -67,7 +69,7 @@
   }
   
   button:hover {
-    background-color: #3182ce;
+    background-color:  #6366f1;;
   }
   
   .error-message {
@@ -80,11 +82,13 @@
     flex-direction: column;
     align-items: center;
     margin: 10px;
+    border: 1px solid #55334f;
   }
   
   .skill-circle svg {
     width: 100px;
     height: 100px;
+    border: 1px solid #55334f;
   }
   
   .skill-circle text {
@@ -98,21 +102,24 @@
     justify-content: space-between;
     align-items: center;
     margin-bottom: 30px;
+    
   }
   
   .card {
-    background-color: white;
+    background: #1e293b;;
     border-radius: 8px;
     padding: 20px;
     margin-bottom: 20px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    border: 1px solid black;
   }
   
   .card h2 {
-    color: #2b6cb0;
+    color: #6366f1;;
     margin-bottom: 15px;
     padding-bottom: 10px;
-    border-bottom: 1px solid #e2e8f0;
+    border-bottom: 1px solid #e9f0f8;
+    
   }
   
   .grid {
@@ -128,9 +135,9 @@
   svg {
     width: 100%;
     height: auto;
-    border: 1px solid #e2e8f0;
+    border: 1px solid #6366f1;
     border-radius: 8px;
-    background-color: white;
+    background-color: #0f172a;
   }
   
   @media (max-width: 768px) {
